--- a/Translucence.theme.css
+++ b/Translucence.theme.css
@@ -13,14 +13,14 @@
 @import url(https://capnkitten.github.io/BetterDiscord/Themes/Translucence/css/source.css);
 
 :root {
-	--app-bg: url(https://i.imgur.com/bgmVeyt.jpg);
+	--app-bg: url(https://media.discordapp.net/attachments/1117156803390746795/1121114568043806811/Screenshot_2023-06-21_172848.png?width=1440&height=609);
 	--app-blur: 6px;
-	--app-margin: 24px;
-	--app-radius: 8px; /*	-	*/
+	--app-margin: 15px;
+	--app-radius: 5px; /*	-	*/
 	
-	--accent-hue: 156;
-	--accent-saturation: 77.5%;
-	--accent-lightness: 47.1%;
+	--accent-hue: 38;
+	--accent-saturation: 100%;
+	--accent-lightness: 52%;
 	--accent-opacity: 1;
 	--accent-text-color: #000; /*	-	*/
 
@@ -32,9 +32,9 @@
 	--message-padding-top: 8px;
 	--message-padding-side: 8px; /*	-	*/
 	
-	--reply-hue: 226;
-	--reply-saturation: 77.4%;
-	--reply-lightness: 61.8%;
+	--reply-hue: 39;
+	--reply-saturation: 100%;
+	--reply-lightness: 51%;
 	--reply-opacity: 1; /*	-	*/
 
 	--textarea-color: 255,255,255;
